# glabu

./: Cargo.toml  readme.md
crates/glabu/: Cargo.toml  Dockerfile
crates/glabu/src/: cli.rs  main.rs
crates/glabu/src/endpoints/: mod.rs  projects.rs  setup.rs
crates/glabu/src/models/: mod.rs  package_list_item.rs  user.rs
glabu/: Cargo.toml  Dockerfile  slim.report.json
glabu/bash/: container_build.bash  package_release.bash
glabu/src/: cli.rs  lib.rs  main.rs
glabu/src/endpoints/: packages.rs  profiles.rs  projects.rs  releases.rs  setup.rs
glabu/src/models/: group.rs  package_list_item.rs  project.rs  project_search.rs  release.rs  user.rs
rust_scripts/container_build/src/: main.rs
rust_scripts/package_release/: Cargo.toml
rust_scripts/package_release/src/: main.rs
scripts/rust/container_build/: Cargo.toml
scripts/rust/package_release/src/: main.rs
src/: lib.rs
