[workspace]
resolver = "2"
members = [
  "glabu",
  "rust_scripts/*",
]

[workspace.dependencies]
xshell = { version = "0.2"}
anyhow = { version = "1.0", features = ["backtrace"] }
osarch = {git = "https://gitlab.com/puterize/osarch.git", rev = "eabcdde754c02b2b8d7d1665d96c5169f971a2fc"}



[profile.release]
# codegen-units = 1
panic = "abort"
strip = true

