[workspace]
resolver = "2"
members = [
  "crates/*",
  "rust_scripts/*",
]

[workspace.dependencies]
xshell = { version = "0.2"}
anyhow = { version = "1.0", features = ["backtrace"] }
osarch = {git = "https://gitlab.com/puterize/osarch.git", rev = "237fb78b2fce45d3b898701ebf7e464fc29b1a51"}



[profile.release]
# codegen-units = 1
panic = "abort"
strip = true
