[package]
name = "glabu"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kaiyin Zhong <kindlychung@gmail.com>"]
description = "A CLI tool for interacting with gitlab api"
repository = "https://gitlab.com/puterize/glabu"

[dependencies]
clap = { version = "4", features = ["derive"] }
ghu = { git = "https://gitlab.com/fa_rfro_mwrong/ghu.git", rev = "0d27a59" }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

urlencoding = "2.1.3"
maplit = "1.0.2"
either = { version = "1", features = ["serde"] }
regex = "1.11.1"
serde_yaml = "0.9.34"

[package.metadata.generate-rpm]
release = "1"
assets = [
    { source = "target/release/glabu", dest = "/usr/local/bin/glabu", mode = "755" },
]


